Wed Aug  2 11:04:15 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Updates.

2000-08-01  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        * gdbarch.sh: Multiarch DO_REGISTERS_INFO macro.
        * gdbarch.h, gdbarch.c: Regenerate.
        * infcmd.c (do_registers_info): Make not static and
        unconditionalize.
        * inferior.h (do_registers_info): Export.

2000-08-01  Kazu Hirata  <kazu@hxi.com>

	* MAINTAINERS: Add myself to "Write After Approval" list.

Tue Aug  1 21:02:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Update list of target maintainers.  List all
 	targets explicitly.
	(sh): Elena Zannoni is maintainer.
	(powerpc): Nick Duffek is a maintainer.
	
Tue Aug  1 17:45:12 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.sh: Parse and save comments in the function_list.  Print
 	them out as part of the header.  Convert all function definitions
 	to ISO-C form.
	* gdbarch.h, gdbarch.c: Regenerate.
	
Tue Aug  1 14:50:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* top.c (get_prompt_1), tracepoint.c (replace_comma): Update
 	function signatures so that they match catch_errors and
 	make_cleanup callbacks.

	* tracepoint.c (encode_actions): Fix arguments passed to
 	stringify_collection_list.

2000-07-31  Kevin Buettner  <kevinb@redhat.com>

	* ppc-tdep.h: New file.
	* Makefile.in (ppc-linux-tdep.o, rs6000-tdep.o): Add ppc-tdep.h
	as a dependency.
	* ppc-linux-tdep.c, rs6000-tdep.c (ppc-tdep.h): Include.

	* ppc-linux-tdep.c (ppc_linux_at_sigtramp_return_path): Made static.

	* rs6000-tdep.c (elf-bfd.h): Include.
	(gdbarch_tdep): Add field osabi to this struct.
	(rs6000_init_extra_frame_info, rs6000_frame_init_saved_regs,
	rs6000_frameless_function_invocation, rs6000_frame_saved_pc,
	rs6000_frame_chain): No longer static.
	(process_note_abi_tag_sections, get_elfosabi): New static
	functions.
	(rs6000_gdbarch_init): Revised to accomodate ELF executables;
	also use Linux specific methods when the target is Linux.
